--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <br>
             <button type="submit" class="btn btn-warning" id="add-button"><strong>Add New Giphy!</strong></button>
         </form>
-        <div id="buttons-view"></div>
+        <div id="buttons-view">
+        </div>
         <div id="gif-view"></div>
     </div>
         <!-- javascript files -->
