--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
     <!-- Overall Bootstrap Grid -->
     <div class="container">
-          <!-- Jumbotron with title and music -->
         <div class="jumbotron">
             <h1 class="text-center">
-              <strong>amazing giphys! </strong>
+              <strong> amazing giphys! </strong>
             </h1>
             <hr>
         </div>
@@ -33,8 +32,7 @@
             <br>
             <button type="submit" class="btn btn-warning" id="add-button"><strong>Add New Giphy!</strong></button>
         </form>
-        <div id="buttons-view">
-        </div>
+        <div id="buttons-view"></div>
         <div id="gif-view"></div>
     </div>
         <!-- javascript files -->
