--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="text-center">
-              <strong> amazing giphys! </strong>
+              <strong> Amazing Giphys! </strong>
             </h1>
             <hr>
         </div>
